# JieEngine-TestGame

./: Barrier.h  CMakeLists.txt  Gold.h  Main.cpp  MainBackground.h  MainMapBackground.cpp  MainMapBackground.h  MainMapStruct.cpp  MainMapStruct.h  Player.cpp  Player.h  README.md
EncryptResource/: Background_1.png.JieEngine  Gold.png.JieEngine  Move.wav.JieEngine
Engine/Include/Box2D/: b2_body.h  b2_chain_circle_contact.h  b2_circle_contact.h  b2_contact_solver.h  b2_edge_polygon_contact.h  b2_island.h  b2_polygon_circle_contact.h  b2_polygon_contact.h  b2_world.h
Engine/Include/JieEngine/: JE.h  JE_Box2DFunction.h  JE_Component.h  JE_Container.h  JE_Entity.h  JE_Map.h  JE_Struct.h  JE_System.h  JE_Unpack.h  JE_World.h
Include/: Background.h  Barrier.h  MainMap.h  Player.h
JieEngine/: Animal.h  Animation.h  Component.h  Decrypt.h  JieEngine.h  Map.h  MapBackground.h  MapStruct.h  Mixer.h  Still.h  Ui.h  Window.h
Resource/: Background_2.png.JieEngine  Barrier.png.JieEngine  Die.mp3.JieEngine  Encrypt  Logo.png.JieEngine  Player.png.JieEngine  Score.mp3.JieEngine
Src/: Main.cpp
include/: Animation.h  Component.h  Decrypt.h  Map.h  MapStruct.h
